--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3-dars</title>
+    <title>Takrorlash</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <h1>class 2</h1>
+    <h1 class="header" id="header">header</h1>
+    <div class="parent-box">
+        <div class="box">
+
+        </div>
+
+        <div class="box-2">
+
+        </div>
+    </div>
+
+    <a class="fixed" href="#header">Tepaga</a>
+
+    <div class="sticky-box">
+        <h3>sticky-box</h3>
+    </div>
+
+    <div class="parent-box">
+        <div class="box">
+
+        </div>
+    </div>
 </body>
+
 </html>
