--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
 
         </div>
     </div>
-    
+
+    <h2>Github o'zgarsa bu sayt o'zgaradi.</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam dolor consequatur id eaque, ducimus nemo,
+        nostrum enim temporibus porro deleniti unde maxime similique praesentium quae, fugit ea debitis facilis officiis
+        delectus? Rerum non eos saepe vero placeat ad. Molestiae, earum ullam vitae id facilis laboriosam voluptatem
+        tempore ad incidunt similique.</p>
+
 </body>
 
 </html>
